# Log_analyzer

./: .pre-commit-config.yaml  Makefile  pyproject.toml  report.html
.github/workflows/: ci.yml
logs/: log_file_2024-10-06.txt
src/: config.json  log_analyzer.py
tests/: test_nginx_log_file.py
